--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ path.to.avatars.folder= /avatars
 
 spring.jpa.hibernate.ddl-auto=update
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+spring.profiles.active=0
